navbar fixes below to 1024 && reduced bottom spacing on click of Accept & Close btn

--- a/source/css/custom-sa.css
+++ b/source/css/custom-sa.css
@@ -7091,12 +7091,13 @@ li.nav-lead-input {
         background: #fb5f66 !important;
         font-size: 12px !important;
         padding: 5px 15px !important;
+		line-height: 16px !important;
     }
     li.nav-lead-input a.lead-email.btn-buildcal:hover {
         background: #fdb6b9 !important;
         color: #fff !important;
         border: 2px solid #fdb6b9 !important;
-        opacity: 1 !important;
+		opacity: 1 !important;
     }
 	/* .navbar-header {width: 100%; margin-right: 0; margin-left: 0;} */
 	.dashboard-login {
@@ -7108,7 +7109,7 @@ li.nav-lead-input {
 @media (max-width: 1280px) and (min-width: 1024px) {
     .custom-navbar.navbar-default .navbar-nav>li>a {font-size: 12px;}
     li.nav-lead-input {width: 267px; margin-right: 0px !important;}
-    .nav-lead-input a.lead-email.btn-buildcal {font-size: 12px !important; padding: 5px 10px !important; line-height: 16px;}
+    .nav-lead-input a.lead-email.btn-buildcal {font-size: 12px !important; padding: 5px 10px !important; line-height: 16px !important;}
     .custom-navbar.navbar-default .navbar-nav>li input.lead-form-email {font-size: 12px; width: 160px;}
 }
 .navbar-collapse {border-top: 1px solid transparent;}
